# vikmo-fresher-assignment-bharath

./: README.md  docker-compose.yml  sales-order-&-inventory-lite openapi.yaml
.devcontainer/: devcontainer.json
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/src/: api.http  manage.py
backend/src/api/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/api/migrations/: 0001_initial.py  0002_alter_orderitem_order.py
backend/src/salesOrderInvLite/: asgi.py  settings.py  urls.py  wsgi.py
